Project clean for now. Next step : knitting